@@ -2,6 +2,8 @@
 - Changed order of the add and delete button in the standard T-bar of the gridPanels
 - Make title of exportDialog translatable
 - Added more space between the product amount and the tax per line in the Billing PDF
+- MoreData support in syncml
+- Errors logged to Group-Office log file accessible with file manager by admins
 
 25-10-2012 4.0.119
 - Table load speed optimization with multiselectgrid for addressbook, tickets, notes. tasks and billing
